<resources>
    <string name="app_name">天府购</string>
    <string name="app_msg">消息中心</string>
    <string name="app_ucenter">个人中心</string>
    <string name="unauthorized">未认证用户</string>
    <string name="type_shou">收款</string>
    <string name="type_pay">付款</string>
    <string name="credit_inm">立即贷款</string>
    <string name="getcredit">申请贷款</string>
    <string name="my_credit">我的贷款</string>
    <string name="credit">银行贷款</string>
    <string name="credit_info">产品信息</string>
    <string name="my_message">通知</string>
    <string name="payment">商城缴费</string>
    <string name="retrieve_password">找回密码</string>
    <string name="packages">服务选择</string>
    <string name="user_login">用户登录</string>
    <string name="authentication">资料认证</string>
    <string name="unselected">未选择</string>
    <string name="set">设置</string>
    <string name="login">登录</string>
    <string name="makesure">确认</string>
    <string name="nickname">昵称</string>
    <string name="next_step">下一步</string>
    <string name="get_id_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="username">用户名/帐号/手机号</string>
    <string name="phone_number">手机号</string>
    <string name="pw">密码</string>
    <string name="set_pw">设置密码</string>
    <string name="id_code">验证码</string>
    <string name="previous">上一步</string>
    <string name="shou">收</string>
    <string name="qr_shoukuan">二维码收款</string>
    <string name="jilu_shoukuan">收款记录</string>
    <string name="generaljournal">流水明细</string>
    <string name="ac_info">用户中心</string>
    <string name="my_ac">我的账户</string>
    <string name="my_credentials">认证信息</string>
    <string name="qr_tip_1">扫描二维码向我付款</string>
    <string name="qr_save">保存二维码图片</string>
    <string name="daily_contacts">日常联系人</string>

    <string name="title1">商家姓名</string>
    <string name="title2">店铺名称</string>
    <string name="title3">  手机号</string>
    <string name="title4">  商铺号</string>
    <string name="title5">商管员ID</string>
    <string name="title6">联系人姓名</string>
    <string name="title7">联系人号码</string>
    <string name="hint1">请输入您的真实姓名</string>
    <string name="hint2">请输入您的商铺名称</string>
    <string name="hint3">请输入您的手机号码</string>
    <string name="hint4">请输入您的单位名称</string>
    <string name="hint5">必填</string>
    <string name="hint6">(该营业执照没有在银行开立过账户)</string>
    <string name="hint7">请输入详细地址</string>
    <string name="hint8">非必填</string>
    <string name="xiugai">请修改后提交！</string>


    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>

    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>