<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:paddingLeft="@dimen/_4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/qr_shoukuan"
                android:textSize="@dimen/textsize18sp"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_340dp"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/_12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36dp"
                android:background="@color/gray_80_alpha_30">
                <TextView
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_centerVertical="true"
                    android:text="@string/shou"
                    android:textSize="@dimen/textsize12sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/text_background_c"
                    android:id="@+id/textView" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_24dp"
                    android:gravity="center"
                    android:text="@string/qr_shoukuan"
                    android:layout_marginLeft="@dimen/_6dp"
                    android:layout_centerVertical="true"
                    android:layout_alignTop="@+id/textView"
                    android:layout_toRightOf="@+id/textView"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/shoukuanjilu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/jilu_shoukuan"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize16sp"
        android:layout_margin="@dimen/_12dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
